--- a/fe/src/styles/App.scss
+++ b/fe/src/styles/App.scss
@@ -6,7 +6,7 @@
 
     .Header, .Footer{
         box-sizing: border-box;
-        background-color: rgb(83, 85, 215);
+        background-color: #3b82f6;
     }
     .Footer{
         min-height: 5rem;
